# aether

./: .gitignore  ANTCOLONY_FR.md  CLAUDE.md  CLAUDEAI_FR.md  Cargo.toml  HANDOFF.md  MATT_VOICE_FR.md  NEXT-UP.md  OPENCLAW_FR.md  README.md  handoff.md
.cargo/: config.toml
.claude/agents/: bench-runner.md  coverage-matrix.md  honesty-auditor.md  roadmap-tracker.md  witness-test-author.md
aether_asm/: Cargo.toml
aether_asm/src/: coff.rs  encode.rs  lib.rs  parse.rs  pe.rs
bench/attention/: run_all.ps1
bench/conv2d/: run_all.ps1
bench/matmul_micro/: run_all.ps1  run_candle.bat
bench/matmul_micro/candle/: Cargo.toml
bench/matmul_micro/candle/src/: main.rs
bench/matmul_micro/pytorch/: bench.py
bench/optfx/: run_all.ps1
bench/parity/: matmul_parity.txt
checkpoints/: aether_lm.weights  antcolony_nano1500.weights  antcolony_nano1500_lr1e3.weights  antcolony_nano600.weights  antcolony_smoke.weights
compiler/: Cargo.toml
compiler/src/: main.rs
compiler/src/ast/: mod.rs
compiler/src/codegen/: ast_dump.rs  mod.rs
compiler/src/diag/: mod.rs
compiler/src/lexer/: mod.rs
compiler/src/mir/: adgraph.rs  ast_opt.rs  async_exec.rs  async_lower.rs  closure_objects.rs  closures.rs  fuse.rs  infer.rs  inline.rs  into_desugar.rs  lifetimes.rs  lifetimes_drive.rs  lto.rs  lto_drive.rs  macros.rs  mod.rs  opt.rs  path_call.rs  regalloc.rs  regalloc_drive.rs  regalloc_plan.rs  self_type.rs  spec.rs  ssa.rs  ssa_drive.rs  test_harness.rs  traits.rs  traits_drive.rs  vectorize.rs  vectorize_drive.rs
compiler/src/parser/: mod.rs
deploy/: README.md  aether-vision.service
docs/: AETHER_HANDOFF.md  BENCHMARKING.md  BENCH_3WAY.md  BENCH_LEDGER.md  BENCH_RESULTS.md  COVERAGE_MATRIX.md  DINOV3_VITL16_SPEC.md  PATH_E_STATUS.md  ROADMAP_V2.md  ROADMAP_V3.md  ROADMAP_V4.md  SPECULATIVE_DECODING_INVESTIGATION.md
examples/: 00_hello.aether  01_matmul.aether  02_train_mlp.aether  03_serve_llama.aether  05_locals.aether  _mini_program.miniaether  _parser_input.miniaether  add_two.spec.aether  aether_lm.aether  aether_lm_spec.aether  aetherc_self_emit_asm.aether  aetherc_self_interp.aether  aetherc_self_jit.aether  aetherc_self_jit_v2.aether  aetherc_self_jit_v3.aether  aetherc_self_lex_skeleton.aether  aetherc_self_lexer_v2.aether  aetherc_self_lexer_v3.aether  aetherc_self_lexer_v4.aether  aetherc_self_parser.aether  aetherc_self_tokens.aether  spec_demo.aether
runtime/: ABI.md  Cargo.toml
runtime/src/: batched_serving.rs  bert.rs  cuda.rs  http2.rs  lib.rs  nccl_real.rs  ops.rs  serving.rs  tensor_parallel.rs  tls13.rs  vit.rs
runtime/tests/: aether_serve_http_wireup.rs  attention_seq1_parity.rs  batched_serving_smoke.rs  bert_bge_probe.rs  bert_session_parity.rs  bert_vocab_probe.rs  bert_wordpiece_parity.rs  cuda_attention_flex_parity.rs  cuda_attention_mla_parity.rs  cuda_batched_crash_repro.rs  cuda_batched_decode_parity.rs  cuda_batched_paged_attention_hetero_parity.rs  cuda_batched_paged_attention_parity.rs  cuda_bert_parity.rs  cuda_graph_smoke.rs  cuda_iq3_s_expert_parity.rs  cuda_iq3_s_matmul_parity.rs  cuda_iq3_xxs_expert_parity.rs  cuda_iq3_xxs_matmul_parity.rs  cuda_iq4_nl_matmul_parity.rs  cuda_iq4_xs_expert_parity.rs  cuda_iq4_xs_matmul_parity.rs  cuda_mla_e2e_synthetic.rs  cuda_mmvq_attn_bench.rs  cuda_moe_shared_expert_parity.rs  cuda_paged_attention_v2_parity.rs  cuda_paged_attention_v3_parity.rs  cuda_paged_kv_parity.rs  cuda_q4_0_matmul_parity.rs  cuda_q4k_matmul_seqB_parity.rs  cuda_q4k_matvec_bench.rs  cuda_q5_k_matmul_parity.rs  cuda_q6_k_expert_parity.rs  cuda_q6k_matmul_seqB_parity.rs  cuda_q8_0_q5_0_matmul_parity.rs  cuda_qkv_bias_rope_parity.rs  cuda_qlora_proj_grad_check.rs  cuda_quant_matmul_backward_parity.rs  cuda_qwen3_block_grad_check.rs  cuda_qwen3_gqa_block_grad_check.rs  (+47 more)
runtime_pe/: Cargo.toml
runtime_pe/src/: lib.rs
scripts/: audit.ps1  h2c_smoke.py  kill-build-fanout.ps1  pp_2rank_witness.sh  smoke.ps1
stdlib/: nn.aether  ops.aether  optim.aether  runtime.aether  tensor.aether
tests/aether/negative/: expect_AE0002_extern_with_body.aether  expect_AE0002_missing_comma.aether  expect_AE0002_unclosed_brace.aether  expect_AE0200_mut_alias.aether  expect_AE0201_shared_after_mut.aether  expect_AE0210_missing_trait_method.aether  expect_AE0211_unknown_trait.aether  expect_AE0212_missing_supertrait.aether  expect_AE0220_type_mismatch.aether  expect_AE0221_arg_mismatch.aether  expect_AE0222_return_mismatch.aether  expect_AE0224_assign_mismatch.aether
tests/aether/positive/: 01_basic_fn.aether  02_attrs.aether  03_struct_const_extern.aether  04_control_flow.aether  05_locals_arith.aether  06_borrow_ok.aether
tests/golden/expected/: autodiff_step.ast.expected  autodiff_step.ll.expected  (+14 more)
tests/runtime/: _helper_multi.aether  activation_backwards_v4.aether  activations_v4.aether  aetherclippy_witness.aether  aetherdoc_witness.aether  aetherfmt_witness.aether  arith_42.aether  array_literal.aether  array_repeat.aether  as_cast.aether  assoc_fn.aether  async_await.aether  async_executor.aether  async_executor_real.aether  async_two_tasks.aether  autotune_matmul.aether  avx2_dot_f32.aether  batch_scheduler.aether  bench_harness_v3.aether  bitwise.aether  block_layout.aether  block_layout.s  bool_literals.aether  borrow_check.aether  borrow_check_v3.aether  bpe_tokenizer_roundtrip.aether  builder_pattern.aether  cargo_manifest.aether  chacha20_poly1305.aether  char_literals.aether  chat_template_from_file.aether  chat_template_render.aether  checkpoint_resume.aether  closure_capture_value.aether  closure_inline_arg.aether  closure_return.aether  closures.aether  closures_captures.aether  collectives_exercise.aether  collectives_v4.aether  (+280 more)
tools/aetherclippy/: Cargo.toml
tools/aetherdoc/: Cargo.toml
tools/aetherfmt/: Cargo.toml
tools/audit/: Cargo.toml
tools/witness-stamper/: Cargo.toml
trainer/: Cargo.toml  LORA_PLAN.md
trainer/src/: config.rs  data.rs  dp.rs  lib.rs  lora.rs  lora_dp.rs  main.rs  model.rs  pipeline.rs  qwen_qlora_stage.rs  qwen_stage.rs  rng.rs  sample.rs
trainer/tests/: cuda_qwen_stage_pp_train.rs
(+18 files in other folders)
