[package]
name = "trainer"
version = "0.1.0"
edition = "2021"
description = "AetherLM trainer — calls only the libaether_rt C ABI. No framework deps."

[[bin]]
name = "aether-train"
path = "src/main.rs"

[[bin]]
name = "aether-infer"
path = "src/bin/infer.rs"

[[bin]]
name = "aether-prepare"
path = "src/bin/prepare.rs"

[[bin]]
name = "aether-serve"
path = "src/bin/serve.rs"

[[bin]]
name = "aether-allreduce"
path = "src/bin/allreduce.rs"

[features]
default = []
# `nccl`: enable the data-parallel training loop in `dp.rs`. Forwards
# the same-named feature to aether_rt so libnccl is linked. Without
# this feature the trainer is single-rank CPU only.
nccl = ["aether_rt/nccl", "dep:cudarc"]

[dependencies]
aether_rt = { path = "../runtime" }
cudarc = { version = "0.13", optional = true, default-features = false, features = ["cuda-12060", "driver", "nccl"] }
